[gd_scene load_steps=3 format=3 uid="uid://c7mh6064kwi8m"]

[ext_resource type="Script" path="res://scripts/level_passed_screen.gd" id="1_gxrci"]

[sub_resource type="QuadMesh" id="QuadMesh_6q1qu"]

[node name="LevelPassedScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxrci")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer"]
modulate = Color(0.705882, 0.729412, 0.278431, 1)
position = Vector2(962.25, 543.75)
scale = Vector2(1925.5, 1088.5)
mesh = SubResource("QuadMesh_6q1qu")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level Passed"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Next Level"

[node name="BackToMenuButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back Top Menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"
